04-gitops-apps/manifests/client-service/base/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: client-service
  labels:
    app: client-service
spec:
  type: ClusterIP
  selector:
    app: client-service
  ports:
    - port: 80
      targetPort: 80
      protocol: TCP
      name: http
