04-gitops-apps/manifests/client-service/base/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: client-service
  annotations:
    alb.ingress.kubernetes.io/scheme: internet-facing
    alb.ingress.kubernetes.io/target-type: ip
    alb.ingress.kubernetes.io/listen-ports: '[{"HTTP":80},{"HTTPS":443}]'
    alb.ingress.kubernetes.io/ssl-redirect: "443"
    alb.ingress.kubernetes.io/certificate-arn: arn:aws:acm:eu-central-1:438950223046:certificate/c92ed728-d7ce-40a4-b511-9c3cfd4c27a0
    external-dns.alpha.kubernetes.io/hostname: dev.bzyk0945.site
spec:
  ingressClassName: alb
  rules:
    - host: dev.bzyk0945.site
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: client-service
                port:
                  number: 80
